tests/ui/binop/issue-77910-1.stderr
error[E0369]: binary operation `==` cannot be applied to type `{fn item foo: for<'a> fn(&'a i32) -> &'a i32}`
  --> $DIR/issue-77910-1.rs:8:5
   |
LL |     assert_eq!(foo, y);
   |     ^^^^^^^^^^^^^^^^^^
   |     |
   |     {fn item foo: for<'a> fn(&'a i32) -> &'a i32}
   |     _
   |
   = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `{fn item foo: for<'a> fn(&'a i32) -> &'a i32}` doesn't implement `Debug`
  --> $DIR/issue-77910-1.rs:8:5
   |
LL | fn foo(s: &i32) -> &i32 {
   |    --- consider calling this function
...
LL |     assert_eq!(foo, y);
   |     ^^^^^^^^^^^^^^^^^^ `{fn item foo: for<'a> fn(&'a i32) -> &'a i32}` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for fn item `{fn item foo: for<'a> fn(&'a i32) -> &'a i32}`
   = help: use parentheses to call this function: `foo(/* &i32 */)`
   = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0381]: used binding `xs` isn't initialized
  --> $DIR/issue-77910-1.rs:3:5
   |
LL |     let xs;
   |         -- binding declared here but left uninitialized
LL |     xs
   |     ^^ `xs` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let xs = todo!();
   |            +++++++++

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0369, E0381.
For more information about an error, try `rustc --explain E0277`.
